changed colors, add alts

--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
         <h2>Picture of nature</h2>
         <div class="images">
           <div class="wraper">
-            <img src="/images/forest.jpg" alt="" />
+            <img src="/images/forest.jpg" alt="image" />
           </div>
           <div class="wraper">
-            <img src="/images/forest.jpg" alt="" />
+            <img src="/images/forest.jpg" alt="image" />
           </div>
         </div>
       </div>
