--- a/index.html
+++ b/index.html
@@ -38,13 +38,28 @@
         <h2>Picture of nature</h2>
         <div class="images">
           <div class="wraper">
-            <img src="/images/forest.jpg" alt="image" />
+            <img src="images/forest.jpg" alt="image">
           </div>
           <div class="wraper">
-            <img src="/images/forest.jpg" alt="image" />
+            <img src="images/forest.jpg" alt="image">
           </div>
         </div>
       </div>
     </section>
+      <footer>
+        <h2>social icons</h2>
+        <div class="container">
+          <div class="icons">
+            <img src="images/facebook.svg" alt="icon" />
+            <img class="twitter" src="images/twitter.svg" alt="icon" />
+            <img src="images/google+.svg" alt="icon" />
+          </div>
+          <ul class="list">
+            <li><a href=""> Home</a></li>
+            <li><a href=""> About Us</a></li>
+            <li><a href=""> Contact</a></li>
+          </ul>
+        </div>
+      </footer>
   </body>
 </html>
